--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.3",
     "history": "^5.1.0",
+    "particles-bg": "^2.5.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2"
