--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "history": "^5.1.0",
         "particles-bg": "^2.5.5",
         "react": "^17.0.2",
+        "react-awesome-button": "^6.5.1",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.0.2"
     }
