--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
         "@emotion/react": "^11.7.0",
         "@emotion/styled": "^11.6.0",
         "@fontsource/roboto": "^4.5.1",
+        "@mui-treasury/components": "^1.10.1",
+        "@mui-treasury/layout": "^4.5.1",
         "@mui/icons-material": "^5.2.1",
         "@mui/material": "^5.2.3",
         "history": "^5.1.0",
@@ -58,6 +60,7 @@
         "react": "^17.0.2",
         "react-awesome-button": "^6.5.1",
         "react-dom": "^17.0.2",
-        "react-router-dom": "^6.0.2"
+        "react-router-dom": "^6.0.2",
+        "react-sweet-progress": "^1.1.2"
     }
 }
