--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "react-awesome-button": "^6.5.1",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.0.2",
-        "react-sweet-progress": "^1.1.2"
+        "react-sweet-progress": "^1.1.2",
+        "react-tiny-fab": "^4.0.4"
     }
 }
