--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "particles-bg": "^2.5.5",
         "react": "^17.0.2",
         "react-awesome-button": "^6.5.1",
+        "react-copy-to-clipboard": "^5.0.4",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.0.2",
         "react-sweet-progress": "^1.1.2",
