feat(PetLove 2.0): new framework

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "PetLove_assets",
+    "name": "frontend",
     "version": "0.1.0",
     "description": "Internet Computer starter application",
     "keywords": [
