--- a/package.json
+++ b/package.json
@@ -48,16 +48,16 @@
         "last 2 edge version"
     ],
     "dependencies": {
-        "@emotion/react": "^11.7.0",
-        "@emotion/styled": "^11.6.0",
-        "@fontsource/roboto": "^4.5.1",
         "history": "^5.1.0",
         "particles-bg": "^2.5.5",
         "react": "^17.0.2",
-        "react-copy-to-clipboard": "^5.0.4",
+        "react-bootstrap": "^1.6.1",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.0.2",
         "react-sweet-progress": "^1.1.2",
-        "react-tiny-fab": "^4.0.4"
+        "react-tiny-fab": "^4.0.4",
+        "react-copy-to-clipboard": "^5.0.4",
+        "react-cool-img": "^1.2.12",
+        "react-jazzicon": "^0.1.3"
     }
 }
