--- a/package.json
+++ b/package.json
@@ -58,6 +58,11 @@
         "react-tiny-fab": "^4.0.4",
         "react-copy-to-clipboard": "^5.0.4",
         "react-cool-img": "^1.2.12",
-        "react-jazzicon": "^0.1.3"
+        "react-jazzicon": "^0.1.3",
+        "react-scroll-to-top": "^1.0.5",
+        "react-loading-overlay": "^1.0.1",
+        "react-loading-skeleton": "^2.2.0",
+        "react-modal": "^3.14.3",
+        "react-placeholder": "^4.1.0"
     }
 }
