--- a/package.json
+++ b/package.json
@@ -52,17 +52,18 @@
         "particles-bg": "^2.5.5",
         "react": "^17.0.2",
         "react-bootstrap": "^1.6.1",
-        "react-dom": "^17.0.2",
-        "react-router-dom": "^6.0.2",
-        "react-sweet-progress": "^1.1.2",
-        "react-tiny-fab": "^4.0.4",
-        "react-copy-to-clipboard": "^5.0.4",
         "react-cool-img": "^1.2.12",
+        "react-copy-to-clipboard": "^5.0.4",
+        "react-dom": "^17.0.2",
         "react-jazzicon": "^0.1.3",
-        "react-scroll-to-top": "^1.0.5",
+        "react-lazyload": "^3.2.0",
         "react-loading-overlay": "^1.0.1",
         "react-loading-skeleton": "^2.2.0",
         "react-modal": "^3.14.3",
-        "react-placeholder": "^4.1.0"
+        "react-placeholder": "^4.1.0",
+        "react-router-dom": "^6.0.2",
+        "react-scroll-to-top": "^1.0.5",
+        "react-sweet-progress": "^1.1.2",
+        "react-tiny-fab": "^4.0.4"
     }
 }
