--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "react-loading-skeleton": "^2.2.0",
         "react-modal": "^3.14.3",
         "react-placeholder": "^4.1.0",
+        "react-paginate": "8.1.0",
         "react-router-dom": "^6.0.2",
         "react-scroll-to-top": "^1.0.5",
         "react-sweet-progress": "^1.1.2",
