--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
         "css-loader": "^6.5.1",
         "events": "3.3.0",
         "html-webpack-plugin": "^5.5.0",
+        "node-sass": "^7.0.1",
         "process": "0.11.10",
+        "sass": "^1.45.1",
         "stream-browserify": "3.0.0",
         "style-loader": "^3.3.1",
         "terser-webpack-plugin": "5.2.5",
