finish merging market, user, nftcard, nftDetail

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
       "allowJs": true,           /* Allow javascript files to be compiled. */
       "jsx": "react",            /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
       "esModuleInterop": true,
+      "resolveJsonModule": true
     },
     "include": ["src/**/*"],
 }
